set(ZHU_RT_REQUIRED_DLLS)

# Add Assimp as IMPORTED
add_library(Assimp SHARED IMPORTED GLOBAL)
set_target_properties(Assimp PROPERTIES
    IMPORTED_LOCATION             "${CMAKE_CURRENT_LIST_DIR}/Assimp/bin/assimp-vc140-mt.dll"
    IMPORTED_IMPLIB               "${CMAKE_CURRENT_LIST_DIR}/Assimp/lib/assimp-vc140-mt.lib"
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/Assimp/include" 
    INTERFACE_COMPILE_DEFINITIONS ""
)
list(APPEND ZHU_RT_REQUIRED_DLLS "${CMAKE_CURRENT_LIST_DIR}/Assimp/bin/assimp-vc140-mt.dll")

# Add SDL2 as IMPORTED
add_library(SDL2 SHARED IMPORTED GLOBAL)
set_target_properties(SDL2 PROPERTIES
    IMPORTED_LOCATION             "${CMAKE_CURRENT_LIST_DIR}/SDL2/bin/SDL2.dll"
    IMPORTED_IMPLIB               "${CMAKE_CURRENT_LIST_DIR}/SDL2/lib/SDL2.lib"
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/SDL2/include" 
    INTERFACE_COMPILE_DEFINITIONS ""
)
list(APPEND ZHU_RT_REQUIRED_DLLS "${CMAKE_CURRENT_LIST_DIR}/SDL2/bin/SDL2.dll")

# Add TinyXML2 as IMPORTED
add_library(TinyXML2 STATIC IMPORTED GLOBAL)
set_target_properties(TinyXML2 PROPERTIES
    IMPORTED_LOCATION             "${CMAKE_CURRENT_LIST_DIR}/TinyXML2/lib/tinyxml2.lib"
    IMPORTED_LOCATION_DEBUG       "${CMAKE_CURRENT_LIST_DIR}/TinyXML2/lib/tinyxml2d.lib"
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/TinyXML2/include" 
    INTERFACE_COMPILE_DEFINITIONS ""
)

# Add Google Test as IMPORTED
add_library(GoogleTest STATIC IMPORTED GLOBAL)
add_library(GoogleMock STATIC IMPORTED GLOBAL)
set_target_properties(GoogleTest PROPERTIES
    IMPORTED_LOCATION             "${CMAKE_CURRENT_LIST_DIR}/GoogleTest/lib/gtest.lib"
    IMPORTED_LOCATION_DEBUG       "${CMAKE_CURRENT_LIST_DIR}/GoogleTest/lib/gtestd.lib"
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/GoogleTest/include" 
    INTERFACE_COMPILE_DEFINITIONS ""
)
set_target_properties(GoogleMock PROPERTIES
    IMPORTED_LOCATION             "${CMAKE_CURRENT_LIST_DIR}/GoogleTest/lib/gmock.lib"
    IMPORTED_LOCATION_DEBUG       "${CMAKE_CURRENT_LIST_DIR}/GoogleTest/lib/gmockd.lib"
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/GoogleTest/include" 
    INTERFACE_COMPILE_DEFINITIONS ""
)

set(ZHU_RT_REQUIRED_DLLS ${ZHU_RT_REQUIRED_DLLS} PARENT_SCOPE)