CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(EngineTest)
SET(TARGET EngineTest)
SET(ENGINE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../Source)

ADD_SUBDIRECTORY(ThirdParty/gtest/NTGS)

FILE(GLOB_RECURSE TEST_SRCS Source/*.cpp)
FILE(GLOB_RECURSE TEST_HDRS Source/*.h)

INCLUDE_DIRECTORIES(ThirdParty ${ENGINE_SOURCE_DIR})
ADD_EXECUTABLE(${TARGET} ${TEST_SRCS} ${TEST_HDRS})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER UniteTests)
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE gtest NTGS)
