CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(Editor)
SET(TARGET Editor)
SET(NTGS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../NTGS/Source)

FILE(GLOB_RECURSE SRCS *.cpp)
FILE(GLOB_RECURSE HDRS *.h)

INCLUDE_DIRECTORIES(${NTGS_SOURCE_DIR})
ADD_EXECUTABLE(${TARGET} ${SRCS} ${HDRS})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER Samples)
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE NTGS)
